--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: swift
-script: xcodebuild -project BaseOperation.xcodeproj -scheme BaseOperation -destination platform\=OS\ X,arch\=x86_64 build test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGN_ENTITLEMENTS="" CODE_SIGNING_ALLOWED=NO TRAVIS=1 | xcpretty && exit ${PIPESTATUS[0]}
+jobs:
+    include:
+        - script: xcodebuild -project BaseOperation.xcodeproj -scheme BaseOperationTests-macOS -destination platform\=OS\ X,arch\=x86_64 test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGN_ENTITLEMENTS="" CODE_SIGNING_ALLOWED=NO TRAVIS=1 | xcpretty && exit ${PIPESTATUS[0]}
+        - script: xcodebuild -project BaseOperation.xcodeproj -scheme BaseOperationTests-iOS -destination platform\=iOS\ Simulator,name=iPhone\ 6 test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGN_ENTITLEMENTS="" CODE_SIGNING_ALLOWED=NO TRAVIS=1 | xcpretty && exit ${PIPESTATUS[0]}
+        - script: xcodebuild -project BaseOperation.xcodeproj -scheme BaseOperationTests-tvOS -destination platform\=tvOS\ Simulator,name=Apple\ TV test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGN_ENTITLEMENTS="" CODE_SIGNING_ALLOWED=NO TRAVIS=1 | xcpretty && exit ${PIPESTATUS[0]}
 xcode_destination: platform=OS X,arch=x86_64
 osx_image: xcode10
